--- a/package.json
+++ b/package.json
@@ -19,7 +19,13 @@
     "prisma": "prisma"
   },
   "dependencies": {
-    "@prisma/client": "^4.13.0",
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/modifiers": "^7.0.0",
+    "@dnd-kit/sortable": "^8.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@prisma/client": "^4.16.2",
     "@remix-run/node": "^2.0.0",
     "@remix-run/react": "^2.0.0",
     "@remix-run/serve": "^2.0.0",
@@ -30,22 +36,32 @@
     "@shopify/shopify-api": "^8.0.2",
     "@shopify/shopify-app-remix": "^2.1.0",
     "@shopify/shopify-app-session-storage-prisma": "^2.0.0",
+    "axios": "^1.6.2",
     "cross-env": "^7.0.3",
+    "dayjs": "^1.11.10",
     "isbot": "latest",
-    "prisma": "^4.13.0",
+    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
+    "prisma": "^4.16.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.0.0",
     "@remix-run/eslint-config": "^2.0.0",
     "@types/eslint": "^8.40.0",
+    "@types/lodash": "^4.14.202",
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "^20.6.3",
     "@types/react": "^18.2.31",
     "@types/react-dom": "^18.2.14",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^8.8.0",
+    "postcss": "^8.4.32",
     "prettier": "^2.8.8",
+    "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2"
   },
   "workspaces": {
@@ -56,5 +72,5 @@
   "trustedDependencies": [
     "@shopify/plugin-cloudflare"
   ],
-  "author": "hfy"
+  "author": "lxx"
 }
