--- a/package.json
+++ b/package.json
@@ -19,12 +19,11 @@
     "prisma": "prisma"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.2.6",
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/modifiers": "^7.0.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.2.2",
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
     "@prisma/client": "^4.16.2",
     "@remix-run/node": "^2.0.0",
     "@remix-run/react": "^2.0.0",
@@ -36,7 +35,9 @@
     "@shopify/shopify-api": "^8.0.2",
     "@shopify/shopify-app-remix": "^2.1.0",
     "@shopify/shopify-app-session-storage-prisma": "^2.0.0",
+    "antd": "^5.12.1",
     "axios": "^1.6.2",
+    "classnames": "^2.3.2",
     "cross-env": "^7.0.3",
     "dayjs": "^1.11.10",
     "isbot": "latest",
@@ -44,6 +45,7 @@
     "lodash-es": "^4.17.21",
     "prisma": "^4.16.2",
     "react": "^18.2.0",
+    "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0"
   },
@@ -55,6 +57,7 @@
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^20.6.3",
     "@types/react": "^18.2.31",
+    "@types/react-color": "^3.0.10",
     "@types/react-dom": "^18.2.14",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.42.0",
